--- a/contenido/calculo.html
+++ b/contenido/calculo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="../css/styles.css">
 <style type="text/css">
 	body{
 		background-color: #cccccc;
@@ -21,7 +21,7 @@
 
 <hr>	<h2>Introducción</h2>
 
-	<img src="media/calculo.jpg">
+	<img src="../media/calculo.jpg">
 
 
 	<p>El cálculo es una actividad natural y primordial en el hombre, que comienza en el mismo momento en que empieza a relacionar unas cosas con otras en un pensamiento o discurso. El cálculo lógico natural como razonamiento es el primer cálculo elemental del ser humano. El cálculo en sentido lógico-matemático aparece cuando se toma conciencia de esta capacidad de razonar y trata de formalizarse.
