--- a/contenido/contenido.html
+++ b/contenido/contenido.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="../css/styles.css">
 	<title>Catálogo de cursos</title>
 </head>
 <body id="body">
@@ -13,7 +13,7 @@
 <hr>
 <div class="grid-container"> 	
 		<div class="item1">
-			<img id="init" src="media/Calculo1.jpg"><br>
+			<img id="init" src="../media/Calculo1.jpg"><br>
 			<p id="b1">
 				<button id="bt">
 					<a href="calculo.html">Cálculo</a>
@@ -22,7 +22,7 @@
 		</div>
 
 		<div class="item2">
-			<img id="init" src="media/aristoteles.jpg">
+			<img id="init" src="../media/aristoteles.jpg">
 			<p id="b1">
 				<button id="bt">
 					<a href="logica.html">Lógica</a>
@@ -31,7 +31,7 @@
 		</div>
 
 		<div class="item3">
-			<img id="init" src="media/historia1.jpg">
+			<img id="init" src="../media/historia1.jpg">
 			<p id="b1">
 				<button id="bt">
 					<a href="historia.html">Historia</a>
@@ -40,10 +40,10 @@
 		</div>
 
 		<div class="item4">
-			<img id="init" src="media/volver.jpg">
+			<img id="init" src="../media/volver.jpg">
 			<p id="b1">
 				<button id="bt">
-					<a href="index.html">Regresar al inicio</a>
+					<a href="../index.html">Regresar al inicio</a>
 				</button>
 			</p>
 		</div>
