--- a/contenido/historia.html
+++ b/contenido/historia.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="../css/styles.css">
 	<style type="text/css">
 		body{
 			background-color: #cccccc;
@@ -20,7 +20,7 @@
 
 <hr>	<h2>Introducción</h2>
 
-	<img src="media/historia.jpg">
+	<img src="../media/historia.jpg">
 
 <p>La historia es la ciencia que tiene como objetivo el estudio de sucesos del pasado, tradicionalmente de la humanidad, y como método, el propio de las ciencias sociales/humanas, así como el de las ciencias naturales en un marco de interdisciplinariedad.</p>
 <p>Se trata de la disciplina que estudia y narra cronológicamente los acontecimientos pasados. Se denomina también «historia» al periodo que transcurre desde la aparición de la escritura hasta la actualidad, aunque es un convencionalismo ampliamente superado, y se considera a la prehistoria también como parte intrínseca de la historia.</p>
