--- a/contenido/logica.html
+++ b/contenido/logica.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="../css/styles.css">
 		<style type="text/css">
 			body{
 				background-color: #cccccc;
@@ -20,7 +20,7 @@
 
 <hr>	<h2>Introducción</h2>
 
-	<img src="media/logica.jpg">
+	<img src="../media/logica.jpg">
 
 	<p>La lógica es una de las ramas de la ciencia que se dedica al estudio de las formas y los modos por los cuales se rige el razonamiento, centrándose en las formas de inferencia válida. De esto se deduce que no tiene un contenido formal propio, si no que nos brinda herramientas para diferenciar un conocimiento válido de otro inválido.</p>
 <br>
