--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <br><br>
 
-	<h2 id="b1"><button id="bt"><a href="contenido.html">Da click aquí para comenzar</a></button></h2>
+	<h2 id="b1"><button id="bt"><a href="contenido/contenido.html">Da click aquí para comenzar</a></button></h2>
 
 
 
